@@ -14,6 +14,7 @@ Build
 -----
 
 - In the OSX installer, update SQLite to 3.6.7, and change bsddb URL.
+  Build against system Tcl framework.
 
 What's New in Python 2.5.3c1?
 =============================
